--- a/k8s.yaml
+++ b/k8s.yaml
@@ -15,6 +15,8 @@ spec:
       containers:
       - name: nginx
         image: nginx:alpine
+        securityContext:
+          allowPrivilegeEscalation: true
         resources:
           limits:
             memory: "64Mi"
