--- a/k8s.yaml
+++ b/k8s.yaml
@@ -16,7 +16,7 @@ spec:
       - name: nginx
         image: nginx:alpine
         securityContext:
-          allowPrivilegeEscalation: true
+          privileged: true
         resources:
           limits:
             memory: "64Mi"
