--- a/k8s.yaml
+++ b/k8s.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx
 spec:
-  replicas: 3
+  replicas: 30
   selector:
     matchLabels:
       app: nginx
@@ -16,7 +16,7 @@ spec:
       - name: nginx
         image: nginx:alpine
         securityContext:
-          privileged: true
+          privileged: false
         resources:
           limits:
             memory: "64Mi"
