--- a/k8s.yaml
+++ b/k8s.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:alpine
+        image: cr___.azurecr.io/nginx:alpine
+        imagePullPolicy: Always
         securityContext:
           privileged: false
         resources:
