--- a/k8s.yaml
+++ b/k8s.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx
 spec:
-  replicas: 10
+  replicas: 2
   selector:
     matchLabels:
       app: nginx
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: cr___.azurecr.io/nginx:alpine
+        image: crreykjavikdevwesteurope.azurecr.io/nginx:alpine
         imagePullPolicy: Always
         securityContext:
           privileged: false
